cloud-1778 update open api spec and parameters
